# markup_fmt

./: _claude.sh  dprint.json
dprint_plugin/: Cargo.toml
dprint_plugin/deployment/: latest.json  schema.json
dprint_plugin/src/: config.rs  lib.rs
dprint_plugin/tests/integration/: case-insensitive.toml  case-insensitive.vue  complex-squash.toml  complex-squash.vue  empty-blocks.toml  empty-blocks.vue  i18n-no-format.toml  i18n-squash.toml  no-default-field.toml  non-lang-attrs.toml  non-lang-attrs.vue  none-with-lang.toml  none-with-lang.vue  per-block.toml  per-block.vue  vue-custom-blocks.vue  whitespace-only.toml  whitespace-only.vue
dprint_plugin/tests/integration/biome/: case-insensitive.vue.snap  complex-squash.vue.snap  empty-blocks.vue.snap  i18n-mixed-content.vue.snap  i18n-no-format.vue.snap  i18n-no-format.vue.snap.new  i18n-squash.vue.snap  i18n-with-comment.vue.snap  no-default-field.vue.snap  non-lang-attrs.vue.snap  none-with-lang.vue.snap  per-block.vue.snap  vue-custom-blocks.vue.snap  whitespace-only.vue.snap
dprint_plugin/tests/integration/dprint_ts/: case-insensitive.vue.snap  complex-squash.vue.snap  empty-blocks.vue.snap  i18n-mixed-content.vue.snap  i18n-no-format.vue.snap  i18n-squash.vue.snap  i18n-with-comment.vue.snap  no-default-field.vue.snap  non-lang-attrs.vue.snap  none-with-lang.vue.snap  per-block.vue.snap  vue-custom-blocks.vue.snap  whitespace-only.vue.snap
dprint_plugin/tests/integration/script-indent-custom-block/: input.toml  input.vue
dprint_plugin/tests/integration/script-indent-custom-block/biome/: input.vue.snap
(+32 files in other folders)
