[package]
name = "dprint_plugin_markup"
version = "0.25.3+sf.1"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "markup_fmt as dprint plugin."
repository = "https://github.com/secforge/markup_fmt"
homepage = "https://github.com/secforge/markup_fmt"
license = "MIT"
publish = false

[package.metadata]
dprint_update_url = "https://github.com/secforge/markup_fmt/releases/latest/download/latest.json"
dprint_schema_url_template = "https://github.com/secforge/markup_fmt/releases/download/v{VERSION}/schema.json"

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
toml = "0.9"

[dependencies]
anyhow.workspace = true
dprint-core = { version = "0.67", default-features = false, features = [
    "wasm",
] }
markup_fmt = { path = "../markup_fmt", features = ["config_serde"] }
serde_json = "1.0"

[dev-dependencies]
dprint-plugin-json = { version = "0.21", features = ["wasm"] }
dprint-plugin-typescript = { version = "0.95", features = ["wasm"] }
insta.workspace = true
malva = { version = "0.14", features = ["config_serde"] }
similar-asserts.workspace = true
toml.workspace = true
